refactor Stream to Iterable in vcs data keys
GitOrigin-RevId: 82d5be6ea238d5c45a25d04fa7828498591bde8b